docs/tests/parser/structs/valid/StructWithFuncDecl.src
struct IFoo {
    fn void bar();
}
