docs/tests/parser/structs/invalid/StructOperatorKeyword.src
struct Foo {
    operator if(Foo a, Foo b) { }
}
